k8s-manifests/order-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-svc
  labels:
    app: order-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-svc
  template:
    metadata:
      labels:
        app: order-svc
    spec:
      containers:
      - name: order-svc
        image: 496043249726.dkr.ecr.us-east-1.amazonaws.com/order-svc:latest
        ports:
        - containerPort: 5001
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order-svc
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
  type: ClusterIP
