k8s-manifests/pilot-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pilot-deployment
  labels:
    app: pilot-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pilot-svc
  template:
    metadata:
      labels:
        app: pilot-svc
    spec:
      containers:
      - name: pilot-container
        image: YOUR_AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/pilot-svc:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: pilot-service
spec:
  selector:
    app: pilot-svc
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
